mule-user-guide/v/3.5/xml-module-reference.adoc
=  XML模块参考

//3.3x

XML模块包含几个工具来帮助您读取，转换和编写XML。

除了此页面上介绍的功能外，您还可以使用启用高效XPath XML路由的 link:/mule-user-guide/v/3.5/sxc-module-reference[SXC模块参考]。

== 支持XPath，XQuery和XSLT版本

2013年，万维网联盟（ http://www.w3.org[W3C]）发布了3.0版XPath XQuery和XSLT标准的新规范。新版本的标准处于"last call"状态，因此极不可能发生重大变化。

Mule 3.6.0为3.0版标准提供了基本支持。 "Basic support"表示只要不依赖模式感知，高阶函数或流，规范的任何功能都受支持。

Mule 3.6.0还改进了对XPath 2.0，XSLT 2.0和XQuery 1.0的支持。

重要提示：我们建议从Mule 3.5升级到3.6.x以充分利用这些功能。

===  Mule 3.6.0中的重要更改

下表列出了Mule 3.6.0中支持的标准及其相关组件的版本。

[%header%autowidth.spread]
|===
|组件 |版本 |支持 | Mule 3.6.0中的更改
| XPath  | 1  |没有|在3.6.0中弃用（支持到Mule 4.0）：*

*  `xpath2()`函数，由 link:/mule-user-guide/v/3.6/xpath[xpath3（）]函数取代
*  JXPath提取器
*  JXPath过滤器
*  Jaxen过滤器

新功能： link:/mule-user-guide/v/3.6/xpath[xpath3（）]，其中包括改进的返回类型处理。有关详情，请参阅 link:/mule-user-guide/v/3.6/xpath[XPath的]。

|  | 2  |是a |
|  | 3  |是 |
|的XQuery

1

是

link:/mule-user-guide/v/3.6/xslt-transformer[XSLT变压器]现在支持XSLT 3.0。变压器的行为和语法保持不变，您可以手动选择变压器应使用的XSLT版本。有关详细信息，请参阅 link:/mule-user-guide/v/3.6/xslt-transformer[3.6 XSLT变压器]文档。

2

是

3

是

XSLT

1

是

link:/mule-user-guide/v/3.6/xquery-transformer[3.6 XQuery变换器]现在支持XQuery 3.0。转换器的行为和语法保持不变，您可以手动选择变压器应使用的XQuery版本。有关详情，请参阅 link:/mule-user-guide/v/3.6/xquery-transformer[3.6 XQuery变换器]和 link:/mule-user-guide/v/3.6/xquery-support[3.6 XQuery支持]。

2

是

3

是
|===

==  XML格式

Mule理解各种各样的XML Java表示形式：

*  org.w3c.dom.Document，org.w3c.dom.Element
*  org.dom4j.Document
*  javax.xml.transform.Source
*  InputStream，String，byte []
*  OutputHandler
*  XMLStreamReader的
*  org.mule.module.xml.transformer.DelayedResult

任何接受XML作为输入的转换器也理解这些类型。

== 变压器

有几个标准的转换器在Mule内处理XML。

[%header,cols="2*"]
|===
| {变压器{1}}说明
| link:/mule-user-guide/v/3.5/xmlobject-transformers[XmlToObject到ObjectToXml]  |使用 link:http://x-stream.github.io/[XStream的]将XML转换为Java对象。
| link:/mule-user-guide/v/3.5/jaxb-transformers[JAXB XmlToObject添加到JAXB ObjectToXml]  |将XML转换为Java对象，然后使用 http://java.sun.com/developer/technicalArticles/WebServices/jaxb/[JAXB]绑定框架（随JDK6提供）
| link:/mule-user-guide/v/3.5/xslt-transformer[XSLT]  |使用XSLT转换XML有效负载。
| link:/mule-user-guide/v/3.5/xquery-transformer[XQuery的]  |使用 http://en.wikipedia.org/wiki/XQuery[XQuery的]转换XML有效负载。
| link:/mule-user-guide/v/3.5/domtoxml-transformer[DomToXml到XmlToDom]  |将DOM对象转换为XML并返回。
| link:/mule-user-guide/v/3.5/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader]  |将XML从消息负载转换为StAX XMLStreamReader。
| link:/mule-user-guide/v/3.5/xpath-extractor-transformer[XPath提取器]  |使用JAXP使用XPath表达式查询和提取对象图。
| link:/mule-user-guide/v/3.5/jxpath-extractor-transformer[JXPath提取器] _ *Deprecated* _  |使用JXPath使用XPath表达式查询和提取对象图。弃用`xpath3()`函数（请参阅 link:/mule-user-guide/v/3.6/xpath[3.6 XPath]）。
| link:/mule-user-guide/v/3.5/xmlprettyprinter-transformer[XmlPrettyPrinter]  |允许您使用受控格式输出XML，包括修剪空白和指定缩进。
|===

=== 带有DelayedResult的高效转换

Mule包含一种称为DelayedResult的特殊XML输出格式。通过延迟任何XML序列化，直到OutputStream可用，此格式允许非常有效的XML转换。

例如，下面是一个设置为使用DelayedResult的XSLT变换器：

[source, xml, linenums]
----
<mxml:xslt-transformer name="transform-in"
      xsl-file="xslt/transform.xslt"
      returnClass="org.mule.module.xml.transformer.DelayedResult"/>
----

如果这个转换的结果被发送到HTTP客户端，HTTP客户端会向Mule询问OutputHandler并将OutputStream传递给它。只有这样Mule才能执行转换，将输出直接写入OutputStream。

如果没有使用DelayedResult，则XML结果在写入OutputStream之前将首先写入内存缓冲区。这会导致您的XML处理速度变慢。

== 过滤器

XML模块包含各种XPath过滤器。有关如何使用过滤器的一般详情，请参阅 link:/mule-user-guide/v/3.5/filters[过滤器]。

===  XPath筛选器

[NOTE]
Mule 3.6.0和更高版本支持XPath 3.0，它与XPath 2.0向后兼容。另一方面，XPath 1.0已弃用，尽管简单的表达式可能有效，但某些表达式可能不兼容。有关详情，请参阅 link:/mule-user-guide/v/3.6/xpath[Mule 3.6 XPath]。


XPath过滤器使用JAXP库来过滤XPath表达式。

当"/e:purchaseOrder/e:shipTo/@country"的值为"US"时，以下配置将消息路由到"vm://echo"端点。

[source, xml, linenums]
----
<outbound>
  <filtering-router>
    <outbound-endpoint address="vm://echo" synchronous="true"/>
    <mule-xml:xpath-filter pattern="/e:purchaseOrder/e:shipTo/@country" expectedValue="US">
      <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
    </mule-xml:xpath-filter>
  </filtering-router>
....
</outbound>
----

=== 模式验证过滤器

模式验证筛选器使用JAXP库针对模式验证消息。

以下配置将针对名为`schema.xsd`的模式和名为`anotherSchema.xsd`的模式验证您的消息。

[source, xml, linenums]
----
<mule-xml:schema-validation-filter schemaLocations="com/myapp/schemas/schema.xsd, com/myapp/schemas/anotherSchema.xsd"/>
----

===  Jaxen过滤器

_ *Deprecated* _

[NOTE]
====
在Mule 3.6.0中，Jaxen过滤器将被弃用，但保留仅用于向后兼容。相反，建议使用新功能`xpath3`，它提供了改进的XPath支持。

有关`xpath3`函数的详细说明，请参阅 link:/mule-user-guide/v/3.6/xpath[XPath的]。
====

Jaxen过滤器使用Jaxen库来基于XPath表达式过滤消息。

当"/e:purchaseOrder/e:shipTo/@country"的值为"US"时，以下配置将消息路由到"vm://echo"端点。

[source, xml, linenums]
----
<outbound>
  <filtering-router>
    <outbound-endpoint address="vm://echo" synchronous="true"/>
    <mule-xml:jaxen-filter pattern="/e:purchaseOrder/e:shipTo/@country" expectedValue="US">
      <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
    </mule-xml:jaxen-filter>
  </filtering-router>
....
</outbound>
----

===  JXPath筛选器

_ *Deprecated* _

[NOTE]
====
在Mule 3.6.0中，JXPath过滤器将被弃用，但保留仅用于向后兼容。相反，建议使用新功能`xpath3`，它提供了改进的XPath支持。

有关`xpath3`函数的详细说明，请参阅 link:/mule-user-guide/v/3.6/xpath[XPath的]。
====

JXPath过滤器与Jaxen过滤器非常相似。它仍然用于历史目的（它存在于Jaxen过滤器之前）。

[source, xml, linenums]
----
<outbound>
    <filtering-router>
        <outbound-endpoint address="vm://echo" synchronous="true"/>
        <mule-xml:jxpath-filter pattern="/e:purchaseOrder/e:shipTo/@country"
                            expectedValue="US">
            <mule-xml:namespace prefix="e" uri="http://www.example.com"/>
        </mule-xml:jxpath-filter>
    </filtering-router>
....
</outbound>
----

== 分配器

XML模块包含两个分离器，一个基于过滤器的分离器和一个循环分离器。

==  XML解析器

在大多数情况下， link:http://www.saxproject.org/about.html[SAX]用于解析您的XML。如果您使用CXF或XmlToXMLStreamReader，请改为使用StAX。
有关更多信息，请参阅Jenkov link:http://tutorials.jenkov.com/java-xml/sax-vs-stax.html[Java SAX vs StAX]网站。

如果您使用SAX，则SAX XML解析器由您的JVM确定。如果您想更改SAX实施，请参阅 link:http://www.saxproject.org/quickstart.html[Sax项目快速启动]。

